--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="/static/style.css">
+	<head>		
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		
 		<title>Welcome to Trivia</title>
+		
 	</head>
 		<body>
-			<div id="wrap">
-				<div id="display_question"><img align="center" src="static/logo.png"></img></div>
-				<div id="score_table"></div>
+			<div class="jumbotron jumbotron-fluid">
+				<div class="container-fluid">
+					<h1 class="display-3">
+			<!--	<div id="display_question"><img align="center" src="static/logo.png"></img></div> -->
+						<span id="display_question">Welcome to Trivia!</span>
+					</h1>
+				</div>
 			</div>
+			<div id="score_table"></div>
+			
+	
 			</body>
 	<script>
 	
